# Brand-Sentiment-Analyzer

./: .gitignore  README.md  docker-compose.yaml  init.sql  pyproject.toml
frontend/: Dockerfile  main.py  pyproject.toml  requirements.txt
ml/: Dockerfile  api.py  pyproject.toml  requirements.txt
ml/evaluation/: data.jsonl  evaluate.py  test.py
ml/evaluation/models/: gemini.py  hf.py  model.py  ollama.py  prompts.py  textblob.py  vader.py
reddit-backend/: Dockerfile  api.py  db.py  models.py  pyproject.toml  requirements.txt  requirements.win.txt  sentiment_models.py  test_latest_histogram_local.py  visualizations.py
reddit-backend/charts/: data_access.py  latest_histogram.py  ml_client.py  reddit_access.py  time_series.py  topic_chart.py
reddit/dung/: main.py
reddit/li/: c.ipynb
reddit/li/streamlit-demo-app/: hello.py
reddit/li/streamlit-demo-app/pages/: 1_Reddit.py  2_Youtube.py
youtube/: api.py  models.py  services.py
youtube/magus/: api.py  main.py  models.py  pyproject.toml  services.py
youtube/vivianne/: api.py  fetch_api.py  main.py  models.py
yt-backend/: Dockerfile  api.py  models.py  plotly-draft.py  pyproject.toml  requirements.txt  services.py  ytapi.py
yt-backend/charts/: latest_histogram.py  time_series.py  word_cloud.py
yt-backend/sample/: download.py  sample.csv  sample.json
yt-backend/src/: api.py  db.py  draft.py  ml.py  models.py  services.py  ytapi.py
yt-backend/src/charts/: hist.py  latest_histogram.py  time_series.py  word_cloud.py
