[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "fastapi[standard]>=0.119.0",
    "google-genai>=1.46.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "textblob>=0.19.0",
    "transformers>=4.57.1",
    "vadersentiment>=3.3.2",
]
