[project]
name = "yt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.119.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly[express]>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "wordcloud>=1.9.4",
]
